Railuino now works with Arduino Mega 2560, too, when a CANdiy shield is being used. Turned out to be a bit trickier than expected: The SS pin needs to be initialized correctly, even if we don't use it. And the Mega doesn't like "!!!" in strings - this breaks the upload.

--- a/Railuino/src/README
+++ b/Railuino/src/README
@@ -1,6 +1,6 @@
-Railuino - Hacking your Märklin
+Railuino - Hacking your Maerklin
 
-This library allows you to control your digital Märklin railway
+This library allows you to control your digital Maerklin railway
 using Arduino. It can be used in two flavors:
 
 (1) As a Mobile Station 2. You can use a Sparkfun CAN shield and a
